# just-learning-rust

./: .gitignore  README.md
async-book/: Cargo.toml  README.md
async-book/2/: Cargo.toml
async-book/2/crates/timer-future/: Cargo.toml
async-book/2/crates/timer-future/src/: executor.rs  lib.rs
async-book/2/src/: main.rs  simple_future.rs
book/1/hello world/: main.rs
book/10/src/: main.rs
book/16/src/: main.rs
book/2/guessing_game/: Cargo.toml
book/2/guessing_game/src/: main.rs
book/3/src/: control_flow.rs  data_types.rs  functions.rs  main.rs  variables.rs
book/4/src/: main.rs
book/5/src/: examples.rs  main.rs  rectangle.rs
book/6/src/: main.rs
book/7/: Cargo.toml
book/7/src/: lib.rs  main.rs
book/8/src/: main.rs
book/9/src/: main.rs
project-10-19/: Cargo.toml  README.md
project-10-19/src/: core.rs  main.rs
project-10-19/src/core/: test.rs
project-10-20/: .gitignore  Cargo.toml  README.md
project-10-20/src/: clip.rs  main.rs
project-10-20/src/video/: Cargo.toml  build.rs  wrapper_videoc.h
project-10-20/src/video/libvideoc/: .gitignore  CMakeLists.txt  videoc.pc.in
project-10-20/src/video/libvideoc/include/: VideoStream.h  renderframe.h
project-10-20/src/video/libvideoc/src/: debug_main.c  debug_videostream.c  renderframe.c
project-10-20/src/video/libvideoc/src/Types/: VideoStream.c
project-10-20/src/video/src/: ffi.rs  lib.rs  main.rs
project-11-04/: Cargo.toml  README.md
project-11-04/src/: lib.rs  main.rs  shader.wgsl  texture.rs
project-11-09/: Cargo.toml  README.md
project-11-09/src/: main.rs
project-11-09/src/example/: Cargo.toml  README.md
project-11-09/src/example/src/: main.rs
project-11-20/: Cargo.toml  README.md
project-11-20/src/: egui.wgsl  lib.rs  main.rs  ui.rs  util.rs  wgpustate.rs
wgsl-guide/: Cargo.toml  README.md
wgsl-guide/src/: compute_example.rs  compute_example2.rs  main.rs  mandelbrot.wgsl
